[CSSRegions] Unable to scroll a scrollable container for regions using mouse wheel https://bugs.webkit.org/show_bug.cgi?id=123886

Source/WebCore:

When an element flowed into a scrollable region is scrolled using the mouse wheel, the event
needs to be propagated to the region containing that element, on top of which the cursor
is located.

Reviewed by Antti Koivisto.

Tests: fast/regions/wheel-scroll-abspos.html
       fast/regions/wheel-scroll.html

* page/EventHandler.cpp:
(WebCore::scrollNode):
(WebCore::EventHandler::defaultWheelEventHandler):
* rendering/RenderBox.cpp:
(WebCore::RenderBox::scroll):
(WebCore::RenderBox::scrollWithWheelEventLocation):
* rendering/RenderBox.h:
* rendering/RenderFlowThread.cpp:
(WebCore::RenderFlowThread::regionFromAbsolutePointAndBox):
* rendering/RenderFlowThread.h:

LayoutTests:

Added tests for scrolling elements flowed into scrollable regions.

Reviewed by Antti Koivisto.

* fast/regions/wheel-scroll-abspos-expected.html: Added.
* fast/regions/wheel-scroll-abspos.html: Added.
* fast/regions/wheel-scroll-expected.html: Added.
* fast/regions/wheel-scroll.html: Added.


Canonical link: https://commits.webkit.org/145846@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163018 268f45cc-cd09-0410-ab3c-d52691b4dbfc